--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,5 @@
 *.env
 src/others/Archiv/
 TODO.txt
-/src/others/simpleStorage.json
-/src/cogs/BotLists.py
+src/others/simpleStorage.json
+src/plugins/BotLists.py
