--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 *.zip
 *.iml
 *.env
-src/others/Archiv/
+src/other/Archiv/
 TODO.txt
-src/others/simpleStorage.json
+src/utils/json/simpleStorage.json
 src/plugins/BotLists.py
