--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@
 *.env
 src/other/Archiv/
 TODO.txt
-src/utils/json/simpleStorage.json
+src/utils/json_files/simpleStorage.json
 src/plugins/BotLists.py
 .vscode/
 .flake8
+venv/
